Finished the Project!

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
       <!-- 4 -->
       <div class="form__step" id="form__step__4">
         <h1 class="step--title">Finishing up</h1>
-        <h1 class="step--bio">Double-check everything looks OK before confirming.</h1>
+        <p class="step--bio">Double-check everything looks OK before confirming.</p>
         
         <div id="summary"></div>
         <div id="total-price"></div>
