Make the Project Responsive till zoom 60% in firefox esr

--- a/index.html
+++ b/index.html
@@ -102,12 +102,12 @@
         </div>
         
         <div class="plan-type-switcher">
-          <span class="monthly">Monthly</span>
+          <span class="monthly plan_type">Monthly</span>
           <label class="switch">
             <input type="checkbox" id="plan-type-checkbox" checked />
             <span class="slider round" /> 
           </label>
-          <span class="yearly">Yearly</span>
+          <span class="yearly plan_type">Yearly</span>
           <span id="offer">2 months free</span>
         </div>
         
