--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
   <!-- CSS FILE -->
-  <link rel="stylesheet" href="./assets/css/styles.css">
+  <link rel="stylesheet" href="./dist/styles.css">
 </head>
 <body>
   <main>
@@ -81,21 +81,21 @@
         <p class="step--bio">You have the option of monthly or yearly billing.</p>
         <div class="plans">
           <button class="plan">
-            <img src="./assets/images/icon-arcade.svg" alt="An image of Console">
+            <img src="./public/images/icon-arcade.svg" alt="An image of Console">
             <div class="plan-content">
               <p class="plan-title">Arcade</p>
               <p class="price">$<span class="price-num">9</span>/<span class="billing">mo</span></p>
             </div>
           </button>
           <button class="plan chose">
-            <img src="./assets/images/icon-advanced.svg" alt="An image of Console">
+            <img src="./public/images/icon-advanced.svg" alt="An image of Console">
             <div class="plan-content">
               <p class="plan-title">Advanced</p>
               <p class="price">$<span class="price-num">12</span>/<span class="billing">mo</span></p>
             </div>
           </button>
           <button class="plan">
-            <img src="./assets/images/icon-pro.svg" alt="An image of Console">
+            <img src="./public/images/icon-pro.svg" alt="An image of Console">
             <div class="plan-content">
               <p class="plan-title">Pro</p>
               <p class="price">$<span class="price-num">15</span>/<span class="billing">mo</span></p>
@@ -184,6 +184,6 @@
     </section>
   </main>
   <!-- JavaScript FILE -->
-  <script src="./assets/js/script.js"></script>
+  <script src="./src/script.js"></script>
 </body>
 </html>
